# TERRALITE

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/scripts/: sync_issues_to_notion.js
.github/workflows/: cmake.yml
assets/textures/blocks/: grass_normal.ppm  water.ppm
assets/textures/ui/: hover_face.ppm
data/: README.md  datatypes.md
data/blocks/: dirt.json  door.json  grass.json  stone.json  water.json
data/items/: dirt.json  door.json  stone.json
data/states/blocks/: wheat.json
docs/: diligent-integration.md
documentation/: PackSchema.md
engine/scripts/: 01_utils.js  02_registry.js  03_startup.js  04_startup_events.js
include/: Math.hpp  Player.hpp
include/app/client/: ClientOptions.hpp
include/client/game/: Game.hpp
include/client/render/: DiligentRenderBackend.hpp  RenderResource.hpp
include/common/ecs/: Components.hpp  EntitySystem.hpp  Systems.hpp
include/common/network/: NetworkManager.hpp
include/common/pack/: JsHelpers.hpp  Pack.hpp  PackManager.hpp  ScriptManager.hpp
include/data/: GameData.hpp  JsonValue.hpp
include/game/: Game.hpp
include/launcher/: LauncherCore.hpp
include/pack/: ScriptManager.hpp
include/platform/glfw/: GlfwClientWindow.hpp
include/player/: Inventory.hpp
include/render/: Mesh.hpp  Renderer.hpp  ShaderProgram.hpp
include/server/: HeadlessServer.hpp
include/ui/: GameUI.hpp
include/world/: Chunk.hpp  TerrainGenerator.hpp  World.hpp
packs/base/: pack.json
packs/base/assets/models/blocks/: cross.json  cube_all.json  cube_column.json  cube_example.json  cube_test.json  dirt.json  door.json  grass_block.json  stone.json  wheat_stage_0.json  wheat_stage_1.json  wheat_stage_2.json  wheat_stage_3.json
packs/base/assets/textures/blocks/: dirt.ppm  grass.ppm  grass_emissive.ppm  grass_roughness.ppm  stone.ppm  wheat_stage_0.ppm  wheat_stage_1.ppm  wheat_stage_2.ppm  wheat_stage_3.ppm
packs/base/assets/ui/: hud.rcss  hud.rml  hud.xaml
packs/base/scripts/: jsconfig.json
packs/base/scripts/startup/: biomes.js  blocks.js  items.js
packs/example_pack/: pack.json
packs/example_pack/scripts/startup/: startup.js
packs/types/: jsconfig.template.json  pack.json  pack.schema.json  schema-dump.json  voxel.code-snippets  voxel.d.ts
platform/apple/TerralieLauncherApp/TerralieLauncherApp/: TerralieLauncherAppApp.swift
platform/apple/TerralieLauncherApp/TerralieLauncherApp.xcodeproj/: project.pbxproj
platform/apple/TerralieLauncherApp/TerralieLauncherAppTests/: TerralieLauncherAppTests.swift
platform/apple/TerralieLauncherApp/TerralieLauncherAppUITests/: TerralieLauncherAppUITests.swift  TerralieLauncherAppUITestsLaunchTests.swift
src/: Math.cpp  Player.cpp  main.cpp
src/app/client/: ClientMain.cpp  ClientOptions.cpp
src/app/launcher/: LauncherMain.cpp
src/client/game/: GameUpdate.cpp
src/client/render/: DiligentRenderBackend.cpp  OpenGLRenderBackend.cpp  Renderer.cpp  ShaderProgram.cpp  TextureManager.cpp
src/common/ecs/: EntitySystem.cpp  Systems.cpp
src/common/network/: NetworkManager.cpp
src/common/pack/: Pack.cpp  PackManager.cpp  ScriptBindingsCustom.cpp  ScriptManager.cpp
src/data/: GameData.cpp  JsonValue.cpp
src/game/: Game.cpp  GameBlocks.cpp  GameLifecycle.cpp  GameRender.cpp  GameUpdate.cpp
src/launcher/: LauncherCore.cpp
src/pack/: ScriptManager.cpp
src/platform/glfw/: GlfwClientWindow.cpp
src/player/: Inventory.cpp
src/render/: Mesh.cpp  Renderer.cpp  ShaderProgram.cpp
src/server/: HeadlessServer.cpp
src/ui/: GameUI.cpp
src/world/: TerrainGenerator.cpp  World.cpp
tests/: LauncherCoreTests.cpp
tools/: run-clang-tidy.ps1
tools/codegen/: generate.js
tools/codegen/schema/: biome.js  block.js  item.js  recipe.js
tools/content_editor/ui/: new.html  newapp.js  newstyles.css
